--- a/website/static/css/index.css
+++ b/website/static/css/index.css
@@ -69,7 +69,7 @@
   border-top: 1px solid #ddd;
   font-size: 12px;
   padding: 0.8em;
-  color: #999;
+  color: #717171;
 }
 .wrapper .sponsors-work .card-text p {
   padding: 0;
